2020-02-26  Devin Rousso  <drousso@apple.com>

        REGRESSION: (257410) [ macOS ] inspector/network/client-blocked-load.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=208251
        <rdar://problem/59812765>

        Reviewed by Timothy Hatcher.

        * UserInterface/Models/SourceCode.js:
        (WI.SourceCode):
        The test failed because it expected `url` to be an empty string (`""`) instead of `null`.
        Use the given `url` parameter exactly as provided instead of trying to add a fallback in the
        case of a falsy value. Given the prevalence of usage of `WI.SourceCode`, it's better to
        match the existing behavior of before r257410 than change it and risk other subtle bugs.

2020-02-25  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: AXI: buttons should be focusable when navigating by pressing Tab
        https://bugs.webkit.org/show_bug.cgi?id=208163
        <rdar://problem/59745448>

        Reviewed by Brian Burg.

        Buttons now accessible with Tab navigation. The focused button has the native focus outline.

        Clicking on the button does NOT move the focus. For example, when you're focused on the
        console prompt, clicking on the icon to hide the right sidebar keeps you focused where
        you were — the console prompt. This behavior matches macOS.

        Convert WI.NavigationItem with role=button from `<div>` to `<button>` elements.
        Button elements have implicit tabIndex=0. When focused, pressing Space or Enter
        triggers "click" event.

        * UserInterface/Views/ActivateButtonNavigationItem.js:
        (WI.ActivateButtonNavigationItem.prototype.set activated):
        Add "aria-pressed" and "aria-label" attributes for VoiceOver.

        * UserInterface/Views/ButtonNavigationItem.css:
        (.navigation-bar .item.button:not(.image-only):focus,):
        (.navigation-bar .item.button.image-only:focus):