@@ -1,3 +1,15 @@
+2020-02-27  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: localize the placeholder "Header" and "value" when editing a local override
+        https://bugs.webkit.org/show_bug.cgi?id=208276
+        <rdar://problem/59763619>
+
+        Reviewed by Brian Burg.
+
+        * Localizations/en.lproj/localizedStrings.js:
+        * UserInterface/Views/LocalResourceOverridePopover.js:
+        (WI.LocalResourceOverridePopover.prototype.show):
+
 2020-02-26  Devin Rousso  <drousso@apple.com>
 
         REGRESSION: (257410) [ macOS ] inspector/network/client-blocked-load.html is failing
